--- a/main.css
+++ b/main.css
@@ -3,6 +3,11 @@ body {
 }
 #c {
 	display: block;
+	height: 100%;
+	width: 100%;
+	margin: 0px;
+	padding: 0px;
+	background: none;
 }
 #loading {
     position: fixed;
