--- a/editor.css
+++ b/editor.css
@@ -1,20 +1,24 @@
 body {
 	margin: 0px;
+	display: flex;
 }
 #c {
 	display: block;
-	height: 50%;
-	width: 50%;
+	height: 70%;
+	width: 70%;
 	margin: 0px;
 	padding: 0px;
 	background: none;
+}
+#tabs {
+	display: block;
 }
 #loading {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh; 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -52,6 +56,15 @@ body {
 	bottom: 0;
 	right: 0;
 }
+#createposition {
+	cursor: pointer;
+	font-size: 24px;
+	margin: 1%;
+	padding: 1%;
+	bottom: 0;
+	right: 0;
+	float: right;
+}
 button {
 	cursor: pointer;
 	margin-top: 10px;
@@ -61,4 +74,44 @@ input {
 	margin-top: 10px;
 	padding: 10px;
 	width: 50vw;
+}
+#tabs {
+	height: 100vh;
+	max-width: 30vw;
+}
+#tabheader {
+	display: flex;
+	max-width: 30vw;
+	overflow-x: auto;
+	scrollbar-width: none;
+	-ms-overflowstyle: none;
+	font-size: 0.8em;
+}
+.tabhead {
+	cursor: pointer;
+	padding: 10px;
+	background: blue;
+	max-width: 10vw;
+	min-width: 5vw;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	border-top: 1px solid blue;
+	border-left: 1px solid blue;
+	border-right: 1px solid blue;
+}
+#linkdata {
+	display: none;
+	padding: 1vw;
+}
+#linkdataname {
+	width: 20vw;
+}
+#linkdatalink {
+	width: 20vw;
+}
+#positions {
+	display: none;
+	overflow-y: auto;
+	padding: 1vw;
 }
