visual position link positioner
finally, yeah? Next should be the exporter so we wrap this up. But I'm getting excited, how about saving and loading my very own JSON variant.

--- a/editor.css
+++ b/editor.css
@@ -137,6 +137,14 @@ input {
 }
 .plink {
 	display: flex;
+	background: white;
+}
+.pl_edit {
+	background: white;
+	cursor: pointer;
+}
+.pl_edit:hover {
+	background: grey;
 }
 .dpl {
 	cursor: pointer;
