--- a/editor.css
+++ b/editor.css
@@ -13,6 +13,13 @@ body {
 }
 #tabs {
 	display: block;
+	height: 70%;
+}
+#menu {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	display: block;
 }
 #loading {
     position: fixed;
