--- a/main.css
+++ b/main.css
@@ -3,8 +3,8 @@ body {
 }
 #c {
 	display: block;
-	height: 100%;
-	width: 100%;
+	height: 100vh;
+	width: 100vw;
 	margin: 0px;
 	padding: 0px;
 	background: none;
