--- a/editor.css
+++ b/editor.css
@@ -15,7 +15,7 @@ body {
 }
 #settings {
 	position: fixed;
-	bottom: 0.9em;
+	bottom: calc(0.8em + 20px);
 	height: 20%;
 	margin: 0px;
 	margin-left: 20px;
@@ -192,14 +192,7 @@ button {
 	width: 30vw;
 	height: 25px;
 }
-#projectstereo {
-	margin: 0;
-	margin-top: 10px;
-	border-radius: 5px;
-	border: solid #00000044 1px;
-	height: 15px;
-	width: inherit;
-}
+
 #picklink {
 	margin-top: 10px;
 	padding: 5px;
@@ -215,10 +208,6 @@ input {
 	border-radius: 5px;
 	border: solid #00000044 1px;
 }
-#stps{
-	padding-left: 5px;
-}
-
 #tabs {
 	margin: 0px;
 	height: 100vh;
