--- a/editor.css
+++ b/editor.css
@@ -51,7 +51,7 @@ body {
 #loading .progress {
     margin: 1.5em;
     border: 1px solid #FFFFFF;
-	border-top: none;
+	border: none;
 	padding-left: 50%;
     width: 50vw;
 }
